# nodebox

./: .gitignore  .project  .travis.yml  AGENTS.md  AUTHORS  Cargo.toml  INSTALL.txt  License.rtf  README  README.md  README_NEW.md  appveyor.yml  build.properties  build.xml  convert_svg_files.py  makeinstaller.nsi  makelauncher.nsi  nodebox-java.ipr  pom.xml  version.properties
.github/workflows/: test.yml
artwork/: animation-icons.psd  custom-node-template.psd  document-properties.pxm  favicon.psd  installer-header.psd  mockup.psd  node-in-port.pxm  nodebox-file.psd  nodebox-icon.psd  nodebox-installer.psd  nodemockup.psd  nodetemplate.psd  notes-yellow.psd
artwork/list/: _template.ai
artwork/math/: _template.ai
core/xml/: types.json
crates/nodebox-cli/: Cargo.toml
crates/nodebox-cli/src/: main.rs
crates/nodebox-core/: Cargo.toml
crates/nodebox-core/examples/: demo.rs
crates/nodebox-core/src/: lib.rs  value.rs
crates/nodebox-core/src/geometry/: canvas.rs  color.rs  contour.rs  font.rs  grob.rs  mod.rs  path.rs  point.rs  rect.rs  text.rs  transform.rs
crates/nodebox-core/src/node/: connection.rs  library.rs  mod.rs  node.rs  port.rs
crates/nodebox-core/tests/: font_tests.rs
crates/nodebox-gui/: Cargo.toml
crates/nodebox-gui/src/: address_bar.rs  animation_bar.rs  app.rs  canvas.rs  eval.rs  export.rs  handles.rs  history.rs  lib.rs  main.rs  native_menu.rs  network_view.rs  node_library.rs  node_selection_dialog.rs  pan_zoom.rs  panels.rs  render_worker.rs  state.rs  theme.rs  timeline.rs  viewer_pane.rs
crates/nodebox-gui/tests/: file_tests.rs  handle_tests.rs  history_tests.rs  integration_tests.rs
crates/nodebox-gui/tests/common/: mod.rs
crates/nodebox-ndbx/: Cargo.toml
crates/nodebox-ndbx/src/: error.rs  lib.rs  parser.rs
crates/nodebox-ndbx/tests/: parse_examples.rs
crates/nodebox-ops/: Cargo.toml
crates/nodebox-ops/examples/: ops_demo.rs
crates/nodebox-ops/src/: filters.rs  generators.rs  lib.rs  list.rs  math.rs  parallel.rs  string.rs
crates/nodebox-ops/tests/: golden_tests.rs
crates/nodebox-python/: Cargo.toml  README.md
crates/nodebox-python/python/nodebox/: __init__.py  functions.py  graphics.py
crates/nodebox-python/src/: bridge.rs  convert.rs  geometry.rs  lib.rs  module.rs  operations.rs  runtime.rs  types.rs
crates/nodebox-svg/: Cargo.toml
crates/nodebox-svg/examples/: generate_svg.rs  text_dots.rs
crates/nodebox-svg/src/: lib.rs  renderer.rs
docs/: README.md  architecture.md  contributing.md  development.md  rust-translation-plan.md
docs/reference/: README.md
docs/user/: README.md
examples/: copy_stamping.ndbx  proximity_sort.ndbx  simple_grid.ndbx  text_scatter.ndbx
examples/Advanced/: henon_phase.ndbx  l_system.ndbx  triangulate.ndbx
examples/Basic Vector/: flower.ndbx  ladybug.ndbx  pattern.ndbx  primitives_face.ndbx  star_grid.ndbx
examples/Basics/Hello_Ellipse/: Hello_Ellipse.ndbx
examples/Basics/Spirograph/: Spirograph.ndbx
examples/Copy Stamping/: checkerboard.ndbx  complex_invader.ndbx  proximity.ndbx  snap_text.ndbx  text_fx.ndbx  waves.ndbx  worms.ndbx
examples/Copystamping/: snap_text.ndbx
examples/Data Visualization/: tallest_buildings.csv  tallest_buildings.ndbx
examples/Math/: font-on-path.ndbx
examples/advanced/: henonphase.ndbx  lsystem.ndbx  triangulate.ndbx
examples/copystamping/: checkerboard.ndbx  complexInvader.ndbx  proximity.ndbx  textfx.ndbx  waves.ndbx
examples/corevector/: ladybug.ndbx  starInGrid.ndbx  text_scatter.ndbx
libraries/color/: color.ndbx
libraries/core/: core.ndbx
libraries/coreimage/: coreimage.ndbx
libraries/corevector/: bezierpatheditor.py  corevector.js  corevector.ndbx  corevector.py  pyhandles.py  pyvector.py  text.ndbx
libraries/corevector/code/: pyhandles.py
libraries/data/: data.ndbx
libraries/device/: device.ndbx
libraries/l_system/: l_system.ndbx  l_system.py
libraries/list/: list.js  list.ndbx
libraries/math/: math.js  math.ndbx  pymath.py
libraries/network/: network.ndbx
libraries/packing/: packing.ndbx  packing.py
libraries/realTime/: realTime.ndbx
libraries/realtime/: realtime.ndbx
libraries/string/: string.js  string.ndbx
libraries/testlib/: testlib.py  types.ntl
platform/: fa-ndbx.properties
platform/mac/: NodeBox.entitlements
platform/mac/res/: Info.plist
scripts/: .env.example  build-linux-appimage.sh  build-linux-deb.sh  build-mac-bundle.sh  build-windows-installer.ps1  create-mac-dmg.sh  notarize-mac-bundle.sh  sign-mac-bundle.sh
specs/: 2026-01-junit5-migration.md  2026-01-python3-migration.md  2026-01-upgrade-dependencies.md  node-caching.md
src-python/nodebox1/graphics/: __init__.py
src-python/svg/: __init__.py
src/main/resources/: corevector.js  graphics.js  ndbx.css  nodecore.js  version.properties
src/net/nodebox/: Icons.java
src/nodebox/: Icons.java
src/nodebox/client/: AbstractParameterEditor.java  AddressBar.java  AnimationBar.java  AnimationTimer.java  Application.java  CodeArea.java  ColorDialog.java  ConnectionLayer.java  Console.java  ConsolePane.java  Divider.java  DraggableNumber.java  EditorApplication.java  EditorPane.java  (+69 more)
test/: demo.ndbx  polynodes.ndbx
test/clojure/: math.clj  no-var-at-end.clj
test/files/: bad-headers.csv  colors.csv  menus.ndbx  polynodes.ndbx  relative-file.ndbx  relative-import.ndbx  relative.py  upgrade-v0.9.ndbx  upgrade-v1.ndbx
wix/: license.rtf  main.wxs
xml/: example.ndbx  types.xml
(+1077 files in other folders)
