[workspace]
resolver = "2"
members = [
    "crates/nodebox-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/nodebox/nodebox"
authors = ["NodeBox Contributors"]

[workspace.dependencies]
# Core geometry
kurbo = "0.11"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Testing
proptest = "1.4"
approx = "0.5"
