[workspace]
resolver = "2"
members = [
    "crates/nodebox-core",
    "crates/nodebox-ndbx",
    "crates/nodebox-ops",
    "crates/nodebox-svg",
    "crates/nodebox-cli",
    "crates/nodebox-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/nodebox/nodebox"
authors = ["NodeBox Contributors"]

[workspace.dependencies]
# Core geometry
kurbo = "0.11"

# Font loading and text paths
font-kit = "0.14"
pathfinder_geometry = "0.5"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# XML parsing
quick-xml = "0.31"

# Error handling
thiserror = "1.0"

# Testing
proptest = "1.4"
approx = "0.5"
