[package]
name = "nodebox-core"
description = "Core types and traits for NodeBox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
