[package]
name = "nodebox-ops"
description = "Geometry operations for NodeBox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nodebox-core = { path = "../nodebox-core" }
rayon = "1.10"

[features]
default = []
parallel = []

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
