[package]
name = "nodebox-svg"
description = "SVG rendering for NodeBox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nodebox-core = { path = "../nodebox-core" }

[dev-dependencies]
approx = { workspace = true }
